[package]
name = "lb-dr"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = { git = "https://github.com/aya-rs/aya", features = ["async_tokio"] }
aya-log = { git = "https://github.com/aya-rs/aya" }
clap = { version = "4.1", features = ["derive"] }
lb-dr-common = { path = "../lb-dr-common", features = ["user"] }
anyhow = "1"
env_logger = "0.10"
libc = "0.2"
log = "0.4"
mac_address = { version = "1.1.5", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.25", features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }
toml = { version = "0.8.12" }

[[bin]]
name = "lb-dr"
path = "src/main.rs"
